spatialaudio: use same rate for input/output

fixes #19369

Signed-off-by: Thomas Guillem <thomas@gllm.fr>
(cherry picked from commit 16f3fdaa38395360f503fc81e77745764609210b)
Signed-off-by: Jean-Baptiste Kempf <jb@videolan.org>